Fixed nav-menu z-index.

--- a/app/design/frontend/Shoperygroup/shopery/web/css/source/_nav-menu.less
+++ b/app/design/frontend/Shoperygroup/shopery/web/css/source/_nav-menu.less
@@ -1,7 +1,7 @@
 .sections.nav-sections {
     position: sticky;
     top: 0;
-    z-index: 10;
+    z-index: 99;
     box-shadow: 0 0 5px 0 #999999;
     margin-bottom: 0;
 
@@ -86,7 +86,6 @@
     .sections.nav-sections {
         position: fixed;
         top: 0;
-        z-index: 99;
 
         .navigation {
             background: #fff;
